[gd_scene load_steps=9 format=3 uid="uid://6n35p3iwtdo6"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_nst5y"]
[ext_resource type="Texture2D" uid="uid://8plemhjk66vr" path="res://assets/bg.png" id="1_pekt0"]
[ext_resource type="PackedScene" uid="uid://cqj52f3vstlar" path="res://trash/room.tscn" id="2_6lwyo"]
[ext_resource type="PackedScene" uid="uid://cglvio3m8onyx" path="res://trash/interface.tscn" id="3_y5xms"]
[ext_resource type="PackedScene" uid="uid://bwmd1tlqthiaq" path="res://trash/lift.tscn" id="4_5p4x5"]
[ext_resource type="PackedScene" uid="uid://c6tqiy8y5su3m" path="res://trash/human.tscn" id="5_poa2w"]
[ext_resource type="Script" path="res://trash/debug_money.gd" id="6_7ke5a"]
[ext_resource type="Script" path="res://scripts/UI_Trash.gd" id="7_seinq"]

[node name="Game" type="Node2D"]
script = ExtResource("1_nst5y")

[node name="Bg" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(700, 700)
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_pekt0")

[node name="Rooms" type="Node2D" parent="."]

[node name="Lift" parent="Rooms" instance=ExtResource("4_5p4x5")]
position = Vector2(708, 314)

[node name="Lift2" parent="Rooms" instance=ExtResource("4_5p4x5")]
position = Vector2(708, 412)

[node name="Room" parent="Rooms" instance=ExtResource("2_6lwyo")]
position = Vector2(773, 314)

[node name="Humans_timer" type="Timer" parent="."]

[node name="Humans" type="Node2D" parent="."]

[node name="Human" parent="Humans" instance=ExtResource("5_poa2w")]
position = Vector2(918, 400)

[node name="Human2" parent="Humans" instance=ExtResource("5_poa2w")]
position = Vector2(918, 400)

[node name="Human3" parent="Humans" instance=ExtResource("5_poa2w")]
position = Vector2(918, 400)

[node name="Interface" parent="." instance=ExtResource("3_y5xms")]

[node name="Debug" type="Node2D" parent="."]
visible = false

[node name="Button" type="Button" parent="Debug"]
offset_left = 6.0
offset_top = 160.0
offset_right = 143.0
offset_bottom = 198.0
script = ExtResource("6_7ke5a")

[node name="Button2" type="Button" parent="Debug"]
offset_left = 6.0
offset_top = 202.0
offset_right = 143.0
offset_bottom = 240.0
script = ExtResource("6_7ke5a")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(700, 500)

[node name="Trash" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_seinq")

[node name="Money_timer" type="Timer" parent="."]

[node name="Polygon2D" type="ColorRect" parent="."]
offset_left = 900.0
offset_top = 343.0
offset_right = 934.0
offset_bottom = 405.0
size_flags_horizontal = 4
color = Color(0.309804, 0.807843, 0.443137, 0.321569)

[connection signal="timeout" from="Humans_timer" to="." method="_on_human_timer_timeout"]
[connection signal="pressed" from="Debug/Button" to="Debug/Button" method="_on_pressed"]
[connection signal="pressed" from="Debug/Button2" to="Debug/Button2" method="_on_pressed"]
[connection signal="timeout" from="Money_timer" to="." method="_on_money_timer_timeout"]
